workspace_dc1/deployments/kms/deployment.yaml
---
apiVersion: v1 
kind: Service 
metadata: 
  name: kms-service
spec:
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080 
  selector:
    app: kms
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

  labels:
    name: kms-api-ingress
  name: kms-api-ingress
spec:
  rules:
    - host: kms.big-data2.safaricomet.net
      http:
        paths:
          - backend:
              service:
                name:  kms-service
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
